Fixed scroll restoration, reduced flickering when clicking on a drink

--- a/src/components/categoryItem.css
+++ b/src/components/categoryItem.css
@@ -3,5 +3,5 @@
     padding: 0.5rem;
     border-radius: 12px;
     font-size: 14pt;
-    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.1);
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.2);
 }
