--- a/src/pages/drinkInfo.css
+++ b/src/pages/drinkInfo.css
@@ -7,6 +7,7 @@
     margin: 0 auto 0 auto;
     border-radius: 4px;
     width: 100%;
+    aspect-ratio: 1/1;
 }
 
 .ingredients {
@@ -57,8 +58,22 @@ ul {
 
 }
 
+.image-loading{
+    animation: pulse 0.75s infinite alternate-reverse;
+}
+
 @media screen and (min-width: 500px) {
     .drink-info img {
         max-width: 50%;
+    }
+}
+
+@keyframes pulse {
+    from {
+        background-color: transparent;
+    }
+    
+    to {
+        background-color: lightgray;
     }
 }
